# gsocialsim

./: .gitignore  AGENT_DEMOGRAPHICS_PLAN.md  GLOBAL_ARCHITECTURE.md  INFLUENCE_MATH.md  LICENSE  POPULATION_SEGMENTS_PLAN.md  PRD.md  README.md  ROADMAP.md  SEGMENT_DATA_STATUS.md  TENSOR_ARCHITECTURE.md  VALIDATION_REPORT.md  agents_only.html  agents_platform.html  bipartite.html  fix_event_phase_init.patch  gsocialsim-gui.sh  influence_graph.html  phase_patch.py  platform.html  project.md  pyproject.toml  pytest.ini  requirements-geo.txt  requirements.txt  run_and_visualize.py  run_stimulus_sim.py  setup.py  stimuli.csv  threshold.html
cpp/: CMakeLists.txt  CUDA_OPTIMIZATION.md  PORTING.md  render_from_cpp.py
cpp/include/: actor_capabilities.h  agent.h  belief_dynamics.h  country.h  cross_border.h  data_source.h  delivery_record.h  demographic_sampling.h  feed_queue.h  geo_world.h  global_social_reality.h  identity_space.h  kernel.h  media_diet.h  network.h  network_manager.h  platform_mechanics.h  population_layer.h  relationship_vector.h  scenario_harness.h  sim_types.h  stimulus_ingestion.h  subscription_service.h  types.h  utils.h
cpp/src/: actor_capabilities.cpp  agent.cpp  agent_demographics.cpp  belief_dynamics.cpp  content_targeting.cpp  country.cpp  cross_border.cpp  data_source.cpp  demographic_sampling.cpp  feed_queue.cpp  geo_world.cpp  global_social_reality.cpp  identity_space.cpp  kernel.cpp  main.cpp  media_diet.cpp  network.cpp  network_manager.cpp  population_layer.cpp  scenario_harness.cpp  stimulus_ingestion.cpp  subscription_service.cpp  utils.cpp
cpp/test/: CMakeLists.txt  test_agent_demographics.cpp  test_belief_dynamics.cpp  test_belief_dynamics_simple.cpp  test_global_architecture.cpp  test_population_layer.cpp  test_subscription_service.cpp  validate_simulation.sh
diagrams/: agent_runtime_state_machine.uml  class_diagram.uml  class_diagram_subscriptions_media.uml  component_diagram.uml  sequence_diagram.uml
docs/: TODO.md  literature.md  phase_contract.md
gui/backend/: requirements.txt
gui/backend/app/: config.py  main.py
gui/backend/app/api/: params.py  (+4 more)
gui/frontend/: package-lock.json  package.json  vite.config.ts
gui/frontend/src/: App.tsx
reports/: agents.html  agents_only.html  agents_platform.html  bipartite.html  full.html  geo_map.html  influence_graph.html  threshold.html
scripts/: build_h3_population.py  geo_download_worldpop.py  run_dash_geo.py
src/gsocialsim/: types.py
src/gsocialsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gsocialsim/agents/: __init__.py  agent.py  attention_system.py  belief_state.py  belief_update_engine.py  budget_state.py  emotion_state.py  generation.py  identity_state.py  impression.py  reward_weights.py
src/gsocialsim/analytics/: analytics.py  attribution.py
src/gsocialsim/evolution/: evolutionary_system.py
src/gsocialsim/kernel/: event_scheduler.py  events.py  sim_clock.py  stimulus_ingestion.py  world_context.py  world_kernel.py  world_kernel_step.py
src/gsocialsim/networks/: network_layer.py
src/gsocialsim/physical/: geo_world.py  physical_world.py
src/gsocialsim/policy/: action_policy.py  bandit_learner.py
src/gsocialsim/social/: __init__.py  global_social_reality.py  relationship_vector.py
src/gsocialsim/stimuli/: content_item.py  data_source.py  interaction.py  stimulus.py
src/gsocialsim/util/: perf.py
src/gsocialsim/visualization/: __init__.py  exporter.py  exporter_agents_only.py  exporter_agents_platform.py  exporter_bipartite.py  exporter_full.py  exporter_threshold.py
tests/: test_attention_system.py  test_belief_model.py  test_daily_consolidation_and_consumption.py  test_event_system.py  test_geo_world.py  test_learning_policy.py  test_phase1.py  test_phase10.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase_contract.py
(+74 files in other folders)
